fix: gitea connection test