@@ -2,15 +2,22 @@ package com.github.leondevlifelog.gitea.tasks;
 
 import com.github.leondevlifelog.gitea.GiteaBundle;
 import com.intellij.ide.BrowserUtil;
+import com.intellij.notification.Notification;
+import com.intellij.notification.NotificationType;
+import com.intellij.openapi.options.ShowSettingsUtil;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vcs.VcsBundle;
+import com.intellij.tasks.TaskBundle;
+import com.intellij.tasks.TaskManager;
 import com.intellij.tasks.config.BaseRepositoryEditor;
+import com.intellij.tasks.config.TaskRepositoriesConfigurable;
+import com.intellij.tasks.impl.RequestFailedException;
 import com.intellij.ui.DocumentAdapter;
 import com.intellij.ui.components.JBCheckBox;
 import com.intellij.ui.components.JBLabel;
 import com.intellij.ui.components.JBTextField;
-import com.intellij.util.Consumer;
+import com.intellij.util.*;
 import com.intellij.util.ui.FormBuilder;
 import com.intellij.util.ui.GridBag;
 import org.jetbrains.annotations.Nls;
@@ -21,9 +28,13 @@ import javax.swing.*;
 import javax.swing.event.DocumentEvent;
 import javax.swing.event.DocumentListener;
 import java.awt.*;
+import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
 
 class GiteaRepositoryEditor extends BaseRepositoryEditor<GiteaRepository> {
+    private final Project project;
     private MyTextField myRepoAuthor;
     private MyTextField myRepoName;
     private MyTextField myToken;
@@ -32,9 +43,11 @@ class GiteaRepositoryEditor extends BaseRepositoryEditor<GiteaRepository> {
     private JBLabel myHostLabel;
     private JBLabel myRepositoryLabel;
     private JBLabel myTokenLabel;
+    static final String TASKS_NOTIFICATION_GROUP = "Task Group";
 
     GiteaRepositoryEditor(final Project project, final GiteaRepository repository, Consumer<? super GiteaRepository> changeListener) {
         super(project, repository, changeListener);
+        this.project = project;
         myUrlLabel.setVisible(false);
         myUsernameLabel.setVisible(false);
         myUserNameText.setVisible(false);
@@ -67,6 +80,7 @@ class GiteaRepositoryEditor extends BaseRepositoryEditor<GiteaRepository> {
         JPanel myHostPanel = new JPanel(new BorderLayout(5, 0));
         myHostPanel.add(myURLText, BorderLayout.CENTER);
         myShareUrlCheckBox.setText(GiteaBundle.message("skip.ssl.verify"));
+        myShareUrlCheckBox.setVisible(false);
         myHostPanel.add(myShareUrlCheckBox, BorderLayout.EAST);
 
         myRepositoryLabel = new JBLabel(GiteaBundle.message("task.repo.repository.field"), SwingConstants.RIGHT);
@@ -85,8 +99,16 @@ class GiteaRepositoryEditor extends BaseRepositoryEditor<GiteaRepository> {
         myToken = new MyTextField(GiteaBundle.message("task.repo.token.field.empty.hint"));
         myTokenButton = new JButton(GiteaBundle.message("task.repo.token.create.button"));
         myTokenButton.addActionListener(e -> {
-            URI uri = URI.create(myURLText.getText());
-            BrowserUtil.browse(uri);
+            String urlText = myURLText.getText();
+            try {
+                URL url = new URL(urlText);
+                URI uri = url.toURI();
+                uri = uri.resolve("/user/settings/applications");
+                BrowserUtil.browse(uri);
+            } catch (MalformedURLException | URISyntaxException ex) {
+                String content = "<p>" + GiteaBundle.message("notification.title.invalid.url") + "</p>" + urlText;
+                new Notification(TASKS_NOTIFICATION_GROUP, GiteaBundle.message("notification.title.invalid.url"), content, NotificationType.WARNING).notify(project);
+            }
         });
 
         JPanel myTokenPanel = new JPanel();
